# python-assessment-b4i

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/task1/: grades_analyzer.py  visualizations.py
src/task2/: number_game.py
src/task3/: palindrome.py
tests/: test_grades_analyzer.py  test_number_game.py  test_palindrome.py  test_visualizations.py
