[tool.poetry]
name = "python-assessment-b4i"
version = "0.1.0"
description = ""
authors = ["Adam Leigh <adam@fluently.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"
pytest-mock = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = "src"
